 - Fixed using the /MENU args -p and -e at the same time.
 - Fixed /reconnect and auto-reconnect issue [1525383].
 - Plugin API:
   * Added fields: lag, queue to the "channels" list.
   * Added fields: sizehigh to the "dcc" list.
   * Added fields: networks to the "notify" list.
   * Handle gracefully plugins that try to execute commands with invalid
     UTF-8.
 - Fixed: [1544960] quitting via tabs behaves bad on bncs.
 - Fixed: [1551620] --version flag needs display.
 - Fixed: [1539236] problem with the /url command (irc:// handling).
 - Fixed: [1568931] treeview problem: closing tabs by holding shift and
   clicking.
 - "Clear" button in Ban List window now has a 'Are you sure?' dialog
   for safety.
 - The notify list can now contain entries specific to only one or more
   IRC networks.
 - Userlist popup menu and buttons: added %e for 'current network name'.
 - Added option: 'Flash taskbar on any private messages'.
 - 
 - 
 - Perl (Lian Wan Situ)
  * Changed Xchat::print and Xchat::command to return false if they are
    called with either no arguments or undef
  * Changed Xchat::user_info so that it works even if the nick parameter
    contains color codes

----------------------------------------------------------------------
 2.6.6 - 18/Jul/2006
----------------------------------------------------------------------

 - Updated translations (es, fr, sr).
 - Fixed connecting to a IRC server via proxy (bug in 2.6.4 only).
 - Fixed the invisible cursor color when using GTKSpell and a black
   input box (when "Use the text box font & colors" is ON).
 - Allow loading a cert/privatekey file from ~/.xchat2/<NetWorkName>.pem
 - Improved the fallback routine when you receive non-UTF8 messages. It
   can now handle CP1252 from mIRC users and the ISO-8859-15 Euro symbol.
 - Added CHANOPT command for setting channel specific options such as showing
   of joins and part, beep on message and color paste (Lian Wan Situ).
 - /CLEAR HISTORY will clear your command history.